<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/inputNameET"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/inputEmailET"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="105dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/inputPhoneET"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="162dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/phone" />

    <EditText
        android:id="@+id/inputBioET"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="221dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/bio" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="298dp"
        android:onClick="submit"
        android:text="@string/submit" />
</RelativeLayout>