<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBlack"
    tools:context=".HomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.0">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="83dp"
            android:layout_height="83dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="11dp"
            android:layout_marginTop="12dp"
            android:scaleType="centerCrop"
            android:src="@drawable/download" />

        <TextView
            android:id="@+id/nameOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@+id/imageView"
            android:text="Name"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/phoneOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nameOut"
            android:layout_marginStart="10dp"
            android:layout_marginTop="-1dp"
            android:layout_toEndOf="@+id/imageView"
            android:text="phone"
            android:textColor="@color/colorBlue"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/emailOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nameOut"
            android:layout_marginStart="9dp"
            android:layout_marginTop="22dp"
            android:layout_toEndOf="@+id/imageView"
            android:text="Email"
            android:textColor="@color/colorBlue"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="100dp"
            android:layout_marginTop="26dp"
            android:layout_toEndOf="@+id/nameOut"
            android:background="@color/colorWhite"
            android:text="@string/follow" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="3dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="13dp"
            android:layout_toEndOf="@+id/button"
            android:background="@color/colorWhite"
            app:srcCompat="@drawable/ic_add_black_24dp" />

        <TextView
            android:id="@+id/bioOut"
            android:layout_width="391dp"
            android:layout_height="51dp"
            android:layout_below="@+id/imageView"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="11dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="9dp"
            android:text="@string/bio"
            android:textAlignment="viewStart"
            android:textColor="#E6E5E5" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="0dp"
        android:layout_marginLeft="9dp"
        android:layout_marginRight="9dp"
        android:layout_weight="0.8"
        android:orientation="horizontal">

        <Button

            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/hash"
            android:text="@string/_29photos"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />

        <Button

            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/hash"
            android:text="@string/_21following"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />

        <Button

            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/hash"
            android:text="@string/_29_followers"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

            <ImageView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/cat4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/cat2" />

            <ImageView

                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/cat3" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

            <ImageView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/cat3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:orientation="vertical">

            <ImageView

                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/cat2" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:orientation="vertical">

            <ImageView

                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/cat6" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/cat5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/cat7" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>